syntax = 'proto3';

package common;

message CommonPacket {
    uint handlerId = 1;
    string userId = 2;
    string version = 3;
    bytes payload = 4;
}

message InitialPacket {
  string deviceId = 1;
  uint playerId = 2;
  float latency = 3;
}